The following list contains all changes to pgAdmin3, as present in svn. 
<ul>
<li>A version number denotes the release version, which contains the patch or feature mentioned.
<li>*** marks fixes that are backported to stable branch, and will be included in the next maintenance release.
<li>Unmarked fixes are experimental and are contained in snapshots only.
</ul>
<br>
<ul>
    <li>2005-11-25 FGP 1.4.1  Don't include pgAgent in the Mac OSX bundle
    <li>2005-11-25 FGP 1.4.1  Include pg_dump/pg_restore in the Mac OSX bundle
    <li>2005-11-20 DP  1.4.1  Use a proper 'Save As' style dialogue for selecting backup files
    <li>2005-11-20 AP  1.4.1  Don't show pk hint when editing view
    <li>2005-11-20 AP  1.4.1  Add missing NO ACTION FK constraint
    <li>2005-11-11 AP         leave pre-1.5 server config settings untouched
    <li>2005-11-10 AP         Configurable indent in ctlSqlBox
    <li>2005-11-10 AP  1.4.1  Fix role rename (r: Antonio)
    <li>2005-11-09 AP         database and schema display restriction
    <li>2005-11-09 AP         overhaul of server config settings
    <li>2005-11-09 AP  1.4.1  fix procedure/triggerFunc collection list
    <li>2005-11-09 AP  1.4.1  Allow all 8.x column changes (r: Chris Velevitch)
    <li>2005-11-09 DP         Add search/replace to the query editor
    <li>2005-11-09 AP  1.4.1  Fix param name quoting for procedures (r: Alex Tyagloff)
    <li>2005-11-04 AP  1.4.0  Fix SET role (r:Florian Pflug), fix role help
    <li>2005-11-04 DP  1.4.0  Fix role inheritance option when creating roles, per Mike Allen
    <li>2005-11-03 DP  1.4.0  Minor fix to the pgAgent command line parser, per Harald Armin Massa
    <li>2005-11-03 DP  1.4.0  Honour type length/precision when creating composite types, per Ivan
    <li>2005-11-02 AP  1.4.0  Fix crash in trigger property (r: Oriza Triznyak)
    <li>2005-11-01 AP  1.4.0  Fix function return type array (r: Andras Voros)