@@ -18,6 +18,7 @@ The following list contains all changes to pgAdmin3, as present in svn.
 </ul>
 <br>
 <ul>
+    <li>2005-11-25 DP  1.4.1  Fix the server status SQL query
     <li>2005-11-25 FGP 1.4.1  Don't include pgAgent in the Mac OSX bundle
     <li>2005-11-25 FGP 1.4.1  Include pg_dump/pg_restore in the Mac OSX bundle
     <li>2005-11-20 DP  1.4.1  Use a proper 'Save As' style dialogue for selecting backup files
